# DX-SnapTray

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  dx-android.ps1  package.json  run-server.sh  tailwind.css
assets/: main.css  tailwind.css
src/: db.rs  login.rs  login_and_twofa.rs  main.rs  server.rs
src/components/: countdown.rs  logo.rs  mod.rs  toast.rs  token_card.rs
src/components/login_screen/: mod.rs
src/components/two_factor_auth/: api.rs  mod.rs  model.rs  view.rs
