[package]
name = "snap-tray-auth"
version = "0.1.0"
authors = ["bivorzk <bzkugli@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main" }
rand = "0.8"

[features]
default = ["web"]
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
server  = ["dioxus/server"]
