[package]
name = "snap-tray-auth"
version = "0.1.0"
authors = ["bivorzk <bzkugli@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main" }
# getrandom must declare the "js" feature for wasm32-unknown-unknown targets.
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
serde = { version = "1", features = ["derive"] }

# ── Platform-specific async timer ─────────────────────────────────────────────
# gloo_timers wraps setTimeout via wasm_bindgen — wasm32 only.
# On native Android / desktop Dioxus uses tokio; calling gloo_timers there
# triggers SIGABRT because the wasm_bindgen FFI functions don't exist.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio's time feature uses OS timers — safe on Android (aarch64/x86_64-linux-android).
tokio = { version = "1", features = ["time", "sync"] }
mongodb = "3"
dotenvy = "0.15"
bcrypt = "0.15"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"

[features]
default = ["web"]
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
server  = ["dioxus/server"]
