[package]
name = "snap-tray-auth"
version = "0.1.0"
authors = ["bivorzk <bzkugli@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main" }
# getrandom must declare the "js" feature for wasm32-unknown-unknown targets.
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
serde = { version = "1", features = ["derive"] }

# ── Platform-specific async timer ─────────────────────────────────────────────
# gloo_timers wraps setTimeout via wasm_bindgen — wasm32 only.
# On native Android / desktop Dioxus uses tokio; calling gloo_timers there
# triggers SIGABRT because the wasm_bindgen FFI functions don't exist.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

# All non-wasm targets (desktop + Android): tokio, reqwest, serde_json
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
futures = "0.3"

# Server-only dependencies (MongoDB, bcrypt, dotenvy)
# These are only compiled when the "server" feature is active.
mongodb = { version = "3", features = ["rustls-tls", "dns-resolver"], optional = true }
dotenvy = { version = "0.15", optional = true }
bcrypt = { version = "0.15", optional = true }

[features]
default = ["fullstack", "server"]
fullstack = ["dioxus/fullstack"]
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
server  = ["dioxus/server", "mongodb", "dotenvy", "bcrypt"]
